Fixed layout bug

--- a/src/components/pages/AddPage.scss
+++ b/src/components/pages/AddPage.scss
@@ -1,7 +1,5 @@
 .add-page {
     .page-content {
-        padding: 24px;
-
         .ant-form-item-control-input-content {
             display: flex;
         }
