--- a/src/components/pages/EditPage.scss
+++ b/src/components/pages/EditPage.scss
@@ -1,7 +1,5 @@
 .edit-page {
     .page-content {
-        padding: 24px;
-
         .ant-form-item-control-input-content {
             display: flex;
         }
