--- a/src/components/pages/ListPage.scss
+++ b/src/components/pages/ListPage.scss
@@ -1,7 +1,5 @@
 .list-page {
     .page-content {
-        padding: 24px;
-
         .ant-table-row {
             cursor: pointer;
 
