--- a/src/components/pages/ViewPage.scss
+++ b/src/components/pages/ViewPage.scss
@@ -1,7 +1,5 @@
 .view-page {
     .page-content {
-        padding: 24px;
-
         .view-item {
             text-align: left;
         }
